fully working server version

--- a/app/client.html
+++ b/app/client.html
@@ -16,5 +16,5 @@
 </head>
 <body>
   <div id="container" class="container" />
-  <script src="js/app.js"></script>
+  <script src="js/client.js"></script>
 </body>
